Fixing more IE bugs, but on my way to cliff jumping

--- a/resources/assets/sass/layout.scss
+++ b/resources/assets/sass/layout.scss
@@ -40,4 +40,10 @@ body {
     flex: 1;
     display: flex;
     overflow: auto;
+    flex-direction: column;
+}
+
+.deals__show-more {
+    text-align: center;
+    margin-bottom: 3rem;
 }
